[project]
name = "ai-based-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.2.1",
    "tushare>=1.4.24",
    "xtquant>=250516.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
